--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main{
   .container{
     display: flex;
     flex-direction: column;
-    background: rgb(255,198,0);
+    background: rgb(19, 238, 103);
     width: 400px;
     height: 600px;
     align-items: center;
@@ -70,8 +70,8 @@ main{
     height: 150px;
     border-radius: 5px;
     font: italic 1.5rem serif;
-    box-shadow: 0px 0px 10px black;
-    background: #000;
+    box-shadow: 0px 0px 10px rgb(25, 146, 216);
+    background: rgb(18, 107, 134);
     color: rgb(255,198,0);
     padding: 20px;
     box-sizing: border-box;
